--- a/package.json
+++ b/package.json
@@ -2,12 +2,13 @@
   "name": "streamingavatar",
   "version": "1.0.0",
   "description": "## Pre-Requisites",
-  "main": "index.js",
+  "main": "nodemon index.js",
   "keywords": [],
   "author": "",
   "license": "ISC",
   "dependencies": {
     "express": "^4.21.2",
+    "nodemon": "^3.1.9",
     "openai": "^4.28.0"
   },
   "devDependencies": {
